--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ dataclasses-json==0.6.7
 distro==1.9.0
 filetype==1.2.0
 Flask==3.1.0
+Flask-Cors==5.0.0
 frozenlist==1.5.0
 fuzzywuzzy==0.18.0
 google-ai-generativelanguage==0.6.10
